_generated-config/1.7/config/quarkus-datasource.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-datasource_configuration]]link:#quarkus-datasource_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.db-kind]]`link:#quarkus-datasource_quarkus.datasource.db-kind[quarkus.datasource.db-kind]`

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.health.enabled]]`link:#quarkus-datasource_quarkus.datasource.health.enabled[quarkus.datasource.health.enabled]`

[.description]
--
Whether or not an health check is published in case the smallrye-health extension is present. 
 This is a global setting and is not specific to a datasource.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.metrics.enabled]]`link:#quarkus-datasource_quarkus.datasource.metrics.enabled[quarkus.datasource.metrics.enabled]`

[.description]
--
Whether or not datasource metrics are published in case the smallrye-metrics extension is present. 
 This is a global setting and is not specific to a datasource. 
 NOTE: This is different from the "jdbc.enable-metrics" property that needs to be set on the JDBC datasource level to enable collection of metrics for that datasource.
--|boolean 
|`false`


a| [[quarkus-datasource_quarkus.datasource.username]]`link:#quarkus-datasource_quarkus.datasource.username[quarkus.datasource.username]`

[.description]
--
The datasource username
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.password]]`link:#quarkus-datasource_quarkus.datasource.password[quarkus.datasource.password]`

[.description]
--
The datasource password
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.credentials-provider]]`link:#quarkus-datasource_quarkus.datasource.credentials-provider[quarkus.datasource.credentials-provider]`

[.description]
--
The credentials provider name
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.credentials-provider-name]]`link:#quarkus-datasource_quarkus.datasource.credentials-provider-name[quarkus.datasource.credentials-provider-name]`

[.description]
--
The credentials provider bean name. 
 It is the `&++#++64;Named` value of the credentials provider bean. It is used to discriminate if multiple CredentialsProvider beans are available. 
 For Vault it is: vault-credentials-provider. Not necessary if there is only one credentials provider available.
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.max-size]]`link:#quarkus-datasource_quarkus.datasource.max-size[quarkus.datasource.max-size]`

[.description]
--

--|int 
|`20`


h|[[quarkus-datasource_quarkus.datasource.named-data-sources]]link:#quarkus-datasource_quarkus.datasource.named-data-sources[Additional named datasources]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.-datasource-name-.db-kind]]`link:#quarkus-datasource_quarkus.datasource.-datasource-name-.db-kind[quarkus.datasource."datasource-name".db-kind]`

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.-datasource-name-.username]]`link:#quarkus-datasource_quarkus.datasource.-datasource-name-.username[quarkus.datasource."datasource-name".username]`

[.description]
--
The datasource username
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.-datasource-name-.password]]`link:#quarkus-datasource_quarkus.datasource.-datasource-name-.password[quarkus.datasource."datasource-name".password]`

[.description]
--
The datasource password
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.-datasource-name-.credentials-provider]]`link:#quarkus-datasource_quarkus.datasource.-datasource-name-.credentials-provider[quarkus.datasource."datasource-name".credentials-provider]`

[.description]
--
The credentials provider name
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.-datasource-name-.credentials-provider-name]]`link:#quarkus-datasource_quarkus.datasource.-datasource-name-.credentials-provider-name[quarkus.datasource."datasource-name".credentials-provider-name]`

[.description]
--
The credentials provider bean name. 
 It is the `&++#++64;Named` value of the credentials provider bean. It is used to discriminate if multiple CredentialsProvider beans are available. 
 For Vault it is: vault-credentials-provider. Not necessary if there is only one credentials provider available.
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.-datasource-name-.max-size]]`link:#quarkus-datasource_quarkus.datasource.-datasource-name-.max-size[quarkus.datasource."datasource-name".max-size]`

[.description]
--

--|int 
|`20`

|===